<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="Gestures &amp; Swiping"
      android:layout="@layout/pref_category_header">
    <ListPreference
        android:key="swipe_dist"
        android:title="@string/pref_swipe_dist_title"
        android:summary="@string/pref_swipe_dist_summary"
        android:defaultValue="15"
        android:entries="@array/pref_swipe_dist_entries"
        android:entryValues="@array/pref_swipe_dist_values"/>
    <ListPreference
        android:key="circle_sensitivity"
        android:title="@string/pref_circle_sensitivity_title"
        android:summary="%s"
        android:defaultValue="2"
        android:entries="@array/pref_circle_sensitivity_entries"
        android:entryValues="@array/pref_circle_sensitivity_values"/>
    <ListPreference
        android:key="slider_sensitivity"
        android:title="@string/pref_slider_sensitivity_title"
        android:summary="%s"
        android:defaultValue="30"
        android:entries="@array/pref_slider_sensitivity_entries"
        android:entryValues="@array/pref_slider_sensitivity_values"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:title="Key Press &amp; Modifiers"
      android:layout="@layout/pref_category_header">
    <typodev.keyboard.prefs.IntSlideBarPreference
        android:key="longpress_timeout"
        android:title="@string/pref_long_timeout_title"
        android:summary="%sms"
        android:defaultValue="600"
        min="50"
        max="2000"/>
    <SwitchPreference
        android:key="keyrepeat_enabled"
        android:title="@string/pref_keyrepeat_enabled"
        android:defaultValue="true"/>
    <typodev.keyboard.prefs.IntSlideBarPreference
        android:key="longpress_interval"
        android:dependency="keyrepeat_enabled"
        android:title="@string/pref_long_interval_title"
        android:summary="%sms"
        android:defaultValue="25"
        min="5"
        max="100"/>
    <SwitchPreference
        android:key="lock_double_tap"
        android:title="@string/pref_lock_double_tap_title"
        android:summary="@string/pref_lock_double_tap_summary"
        android:defaultValue="false"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:title="Physical Keyboard"
      android:layout="@layout/pref_category_header">
    <ListPreference
        android:key="physical_keyboard_behavior"
        android:title="@string/pref_physical_keyboard_behavior"
        android:summary="%s"
        android:defaultValue="hide"
        android:entries="@array/pref_physical_keyboard_behavior_entries"
        android:entryValues="@array/pref_physical_keyboard_behavior_values"/>
  </PreferenceCategory>

</PreferenceScreen>
